package bases;

public class Admin extends User{

    public Admin(String name, String email) {
        super(name, email);
    }

    
    
}
