package model.domain;

public enum CourseStatus {
    ACTIVE, INACTIVE
}
