package model.domain;

public enum DifficultyLevel {
    BEGINNER, INTERMEDIATE, ADVANCED
}
